shinsplat_clip_text_encode
	6/1/2024
	updated to be compatible with Cascade